--- a/index.html
+++ b/index.html
@@ -1,43 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Circle ⭕ - Home Feed</title>
-  <link rel="stylesheet" href="css/style.css">
-  <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <title>Circle ⭕ | Home Feed</title>
+
+  <!-- Core Styles -->
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/components.css">
+  <link rel="stylesheet" href="css/utilities.css">
+
+  <!-- External Libraries -->
+  <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" defer></script>
+  <script src="js/app.js" type="module" defer></script>
 </head>
 <body>
 
-<header class="top-nav" role="banner">
-  <input type="text" id="searchInput" placeholder="Search..." aria-label="Search">
-  <div class="icons">
-    <button class="notification" aria-label="Notifications">
-      🔔 <span class="badge">3</span>
-    </button>
-    <button class="profile" aria-label="Profile">👤</button>
-    <button id="themeToggle" aria-label="Toggle Dark Mode">🌙</button>
-  </div>
-</header>
+  <!-- Top Navigation -->
+  <header class="top-nav">
+    <div class="brand">⭕ Circle</div>
+    <input type="search" id="searchInput" placeholder="Search..." aria-label="Search">
+    <div class="actions">
+      <button class="icon-btn" id="notifBtn">🔔<span class="badge">3</span></button>
+      <button class="icon-btn" id="profileBtn">👤</button>
+      <button class="icon-btn" id="themeToggle">🌙</button>
+    </div>
+  </header>
 
-<div id="snackbar" role="status" aria-live="polite"></div>
+  <!-- Snackbar Notifications -->
+  <div id="snackbar" role="status" aria-live="polite"></div>
 
-<main class="main-content">
-  <section class="home-feed" id="homeFeed">
-    <!-- Cards will load dynamically from feed.json -->
-  </section>
-</main>
+  <!-- Main Content -->
+  <main class="main-content">
+    <section class="home-feed" id="homeFeed" aria-label="Home Feed">
+      <!-- Cards injected dynamically -->
+    </section>
+  </main>
 
-<nav class="bottom-nav" role="navigation">
-  <a href="index.html" class="nav-btn active" aria-current="page">⭕ Home</a>
-  <a href="circles.html" class="nav-btn">Circles</a>
-  <a href="marketplace.html" class="nav-btn">Marketplace</a>
-  <a href="academics.html" class="nav-btn">Academics</a>
-  <a href="profile.html" class="nav-btn">Profile</a>
-</nav>
+  <!-- Bottom Navigation -->
+  <nav class="bottom-nav" role="navigation">
+    <a href="index.html" class="nav-btn active" aria-current="page">⭕ Home</a>
+    <a href="circles.html" class="nav-btn">Circles</a>
+    <a href="marketplace.html" class="nav-btn">Marketplace</a>
+    <a href="academics.html" class="nav-btn">Academics</a>
+    <a href="profile.html" class="nav-btn">Profile</a>
+  </nav>
 
-<script src="js/app.js"></script>
-<script src="js/feed.js"></script>
 </body>
 </html>
