--- a/index.html
+++ b/index.html
@@ -1,44 +1,41 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Circle ⭕ | Home Feed</title>
-
-  <!-- Core Styles -->
+  <title>Circle ⭕ - Home Feed</title>
   <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/components.css">
-  <link rel="stylesheet" href="css/utilities.css">
-
-  <!-- External Libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js" defer></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" defer></script>
-  <script src="js/app.js" type="module" defer></script>
+  <link rel="stylesheet" href="css/themes.css">
+  <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 </head>
-<body>
+<body data-theme="light">
 
-  <!-- Top Navigation -->
-  <header class="top-nav">
-    <div class="brand">⭕ Circle</div>
-    <input type="search" id="searchInput" placeholder="Search..." aria-label="Search">
-    <div class="actions">
-      <button class="icon-btn" id="notifBtn">🔔<span class="badge">3</span></button>
-      <button class="icon-btn" id="profileBtn">👤</button>
-      <button class="icon-btn" id="themeToggle">🌙</button>
+  <!-- 🔝 Top Navigation -->
+  <header class="top-nav" role="banner">
+    <input type="text" id="searchInput" placeholder="Search..." aria-label="Search">
+    <div class="icons">
+      <button class="notification" aria-label="Notifications">
+        🔔 <span class="badge">3</span>
+      </button>
+      <button class="profile" aria-label="Profile">👤</button>
+      <button id="themeToggle" aria-label="Toggle Dark Mode">🌙</button>
     </div>
   </header>
 
-  <!-- Snackbar Notifications -->
+  <!-- 📢 Snackbar System -->
   <div id="snackbar" role="status" aria-live="polite"></div>
 
-  <!-- Main Content -->
+  <!-- 📰 Main Content -->
   <main class="main-content">
-    <section class="home-feed" id="homeFeed" aria-label="Home Feed">
-      <!-- Cards injected dynamically -->
+    <section class="home-feed" id="homeFeed">
+      <!-- Feed cards dynamically injected from feed.json -->
     </section>
   </main>
 
-  <!-- Bottom Navigation -->
+  <!-- 📱 Bottom Navigation -->
   <nav class="bottom-nav" role="navigation">
     <a href="index.html" class="nav-btn active" aria-current="page">⭕ Home</a>
     <a href="circles.html" class="nav-btn">Circles</a>
@@ -47,5 +44,11 @@
     <a href="profile.html" class="nav-btn">Profile</a>
   </nav>
 
+  <!-- ⚙️ Scripts -->
+  <script src="js/app.js"></script>
+  <script src="js/feed.js"></script>
+  <script src="js/snackbar.js"></script>
+  <script src="js/theme.js"></script>
+  <script src="js/nav.js"></script>
 </body>
 </html>
